results/scraper/launchpad-without-comments/1801073
util/zbin.c:390:37: error: absolute value function 'abs' given an argument of type 'long int' but has parameter of type 'int' which may cause truncation of value [-Werror=absolute-value]

For qemu-3.0.0 I see with GCC 9 compiler a new warning:

$ make -j1 -C roms pxerom VERBOSE=1 V=1
make: Entering directory '/home/abuild/rpmbuild/BUILD/qemu-3.0.0/roms'
make -C ipxe/src CONFIG=qemu \
	PACKAGING_TIMESTAMP=1534273834 \
	CROSS_COMPILE= \
	bin/8086100e.rom bin/808610d3.rom bin/80861209.rom bin/10500940.rom bin/10222000.rom bin/10ec8139.rom bin/1af41000.rom bin/15ad07b0.rom
make[1]: Entering directory '/home/abuild/rpmbuild/BUILD/qemu-3.0.0/roms/ipxe/src'
gcc  -Wall -W -Wformat-nonliteral -O2 -g -Werror util/zbin.c -llzma -o util/zbin
util/zbin.c: In function 'process_zinfo_add':
util/zbin.c:390:37: error: absolute value function 'abs' given an argument of type 'long int' but has parameter of type 'int' which may cause truncation of value [-Werror=absolute-value]
  390 |      ( ( addend < 0 ) ? "-" : "" ), abs ( addend ), size,
      |                                     ^~~
util/zbin.c:398:37: error: absolute value function 'abs' given an argument of type 'long int' but has parameter of type 'int' which may cause truncation of value [-Werror=absolute-value]
  398 |      ( ( addend < 0 ) ? "-" : "" ), abs ( addend ), size,
      |                                     ^~~
util/zbin.c:419:37: error: absolute value function 'abs' given an argument of type 'long int' but has parameter of type 'int' which may cause truncation of value [-Werror=absolute-value]
  419 |      ( ( addend < 0 ) ? "-" : "" ), abs ( addend ),
      |                                     ^~~
cc1: all warnings being treated as errors
make[1]: *** [Makefile.housekeeping:1368: util/zbin] Error 1